--- a/Opdrachtenphp/phpbegincursus/app.yaml
+++ b/Opdrachtenphp/phpbegincursus/app.yaml
@@ -1,13 +1,16 @@
-application: phpbegincursus
+application: phpbegincursus  
 version: 1
 runtime: php55
 api_version: 1
 threadsafe: yes
 
 handlers:
-- url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
+- url: /(.+\.(html|css|gif|png|jpg))$
+  static_files: \1
+  upload: .+\.(html|css|gif|png|jpg)$
+  application_readable: true
 
-- url: .*
-  script: main.php
+- url: /.*
+  static_files: home.html
+  upload: home.html
+  application_readable: true
